# spark-byo-secai

./: .gitignore  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  VERSION.txt  app_sim.py
.devcontainer/: devcontainer.json
SPARK_v1_2/: README.md  app.py  requirements.txt
SPARK_v1_2/.streamlit/: config.toml
SPARK_v1_2/byo_secai/: config.py  (+23 more)
demo_profiles/: profile.json  seed.json
docs/: branding.md
docs/architecture/spark-ai-soc/: README.md  pyproject.toml
docs/architecture/spark-ai-soc/configs/: agent_profiles.yaml  ai_providers.yaml  model_profiles.yaml  telemetry_platforms.yaml
docs/architecture/spark-ai-soc/docs/: ARCHITECTURE.md  BUILD_DESIGN.md
docs/architecture/spark-ai-soc/spark_ai_soc/: main.py  orchestrator.py
docs/architecture/spark-ai-soc/spark_ai_soc/agents/: detection_engineer.py  incident_responder.py  intel_analyst.py  threat_hunter.py
docs/architecture/spark-ai-soc/spark_ai_soc/ai_gateway/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
docs/architecture/spark-ai-soc/spark_ai_soc/prompts/: detection_engineer.md  incident_responder.md  intel_analyst.md  threat_hunter.md
docs/architecture/spark-ai-soc/spark_ai_soc/schemas/: attack_path.schema.json  detection.schema.json  hunt_package.schema.json  intel_record.schema.json  ir_report.schema.json
docs/architecture/spark-ai-soc/spark_ai_soc/workflows/: cve_to_twpp.py  hunt_to_ads.py  hunt_to_ir_report.py  intel_to_hunt.py  poc_to_attack_paths.py
docs/architecture/spark-ai-soc/tests/: test_ai_gateway.py  test_orchestrator.py  test_schemas.py
(+137 files in other folders)
